src/renderer/features/workbench/components/FileTree/FileTree.scss
.file-tree-container {
  color: #3F3F46;
  font-weight: 400;

  .react-checkbox-tree {
    width: 100%;
    font-size: 14px;

    > ol {
      display: grid;
      overflow-x: scroll;
    }

    .rct-collapse {
      padding-right: 0;
  }
  }

  .rct-node {
    margin: 2px 0;
    overflow: visible;

    $bg: #dbe7ff;

    .selected {
      border-radius: 2px;
      background-color: $bg !important
    }

    .rct-bare-label {
      width: 100%;

      *:focus {
        background: #eef3fdad;
      }
    }

    .rct-title {
      width: 100%;
      position: absolute;

      > div {
        padding-left: 25px;
      }
    }

    .rct-node-clickable {
      display: flex;
      width: 100%;
      position: relative;
    }

    &.status-pending > span .rct-node-icon::before  {
      background: var(--color-status-pending);
    }

    &.status-identified > span .rct-node-icon::before  {
      background: var(--color-status-identified);
    }

    &.status-ignored > span .rct-node-icon::before  {
      background: var(--color-status-ignored);
    }

    &.filter-item .rct-node-icon::before  {
      background: transparent !important;
    }
  }

  .rct-node-icon {
    color: #3F3F46;
    position: relative;

    &::before {
      content: '';
      display: inline-block;
      position: absolute;
      left: 15px;
      bottom: 1px;
      background: transparent;
      width: 7px;
      height: 7px;
      border-radius: 50%;
    }
  }

  .match-info-result {
    font-weight: 500;
    color: #27272A;

    .rct-node-icon {
      color: #27272A;
    }
  }

  .filter-item {
    color: #968d8d8a;

    .rct-title {
      font-weight: 400 !important;
    }

    .rct-node-icon {
      color: #968d8d8a;
    }
  }

  .exclude-item {
    font-weight: 600;
    color: #968d8d8a;
    text-decoration:line-through;

    .rct-node-icon {
      color: #968d8d8a;
    }
  }

  .no-match {
    font-weight: 400;
  }

}

.loader {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;

  span {
    font-size: 12px;
    margin-bottom: 60px;
    color: var(--color-status-ignored);
  }
}

